# mgcore-x86_64

./: .gitignore  CMakeLists.txt  README.md  TODO.md  run.sh
boot/: boot.asm  boot64.asm  grub.cfg  limine.conf  linker.ld
docs/: README.md  syscalls.md
drivers/: keyboard.c  mouse.c
include/mgcore/: cli.h  commands.h  console.h  elf.h  errno.h  fs.h  input.h  interrupt.h  io.h  kernel.h  keyboard.h  kstring.h  mouse.h  multiboot2.h  net.h  pmm.h  safeboot.h  sched.h  signal.h  swap.h  syscall.h  task.h  types.h  util.h  vmm.h
lib/crt/: crt0.asm
lib/libc/: string.c  syscall.c  unistd.c
lib/libc/include/: signal.h  unistd.h
lib/libc/include/sys/: stat.h  syscall.h  time.h  types.h
scripts/: mkinitramfs.py  run.ps1  setup-limine.ps1  setup-limine.sh
src/cli/: shell.c
src/cli/commands/: builtin.c
src/kernel/: console.c  elf.c  fs.c  interrupt.c  interrupt_stubs.asm  main.c  net.c  pmm.c  safeboot.c  scheduler.c  signal.c  string.c  swap.c  syscall.c  syscall_arch.c  syscall_entry.asm  task.c  tmpfs.c  util.c  vmm.c
src/syscall/: syscall_impl.c  syscall_table.c  unistd.h
userspace/: init.c  shell.c  user.ld
userspace/test_programs/: hello.c  hello.py
